--- a/clase5/index.html
+++ b/clase5/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <h1>vamos ciclon!!!!</h1>
+
+
+<script src="tarea.js"></script>
 <script src="ejercicio.js"></script>
    <script src="main.js"></script> 
 </body>
